# AI-Wine-Cellar

./: .env.example  .gitignore  CLAUDE.md  DEBUG_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  PHASE3_CHECKLIST.md  PHASE3_SETUP.md  PHASE4_USER_STORY_2_SUMMARY.md  PHASE6_IMPLEMENTATION_SUMMARY.md  README.md  ROADMAP.md  VERIFICATION_CHECKLIST.md  docker-compose.yml
admin/: admin.js  index.html
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  add_max_attendees_to_production.py  check_current_db.py  check_local_db.py  check_zeabur_db.py  create_test_invitation.py  database_export_20260223_152334.json  database_export_fixed_20260223_155811.json  diagnose_data.py  export_database.py  export_wine_data.py  final_fix.py  fix_all_tables.py  fix_users_table.py  fix_users_table_complete.py  fix_wine_import.py  fixed_export.py  import_database.py  import_wine_data.py  manual_migrate.py  migrate_to_new_db.py  pyproject.toml  run_migration.py  simple_import.py  simple_migrate.py  smart_import.py  test_create_invitation.py  test_invitation_102.py  test_minimal.py  verify_import.py  verify_migration.py  wine_cellar_export_20260223_160517.json
backend/admin/: admin.js  index.html
backend/migrations/: 001_add_budget_settings.sql  002_add_archive_status.sql  003_add_budget_warning.sql  004_fix_invitations_schema.sql
backend/src/: config.py  database.py  fix_db.py  init_db.py  main.py
backend/src/data/: fridge_models.json
backend/src/models/: __init__.py  budget_settings.py  food_item.py  fridge.py  fridge_member.py  invitation.py  notification_settings.py  recipe.py  user.py  user_recipe.py  wine_cellar.py  wine_item.py
backend/src/routes/: __init__.py  admin.py  budget.py  dependencies.py  food_items.py  fridge_export.py  fridge_members.py  fridges.py  invitations.py  line_webhook.py  notifications.py  recipes.py  wine_cellars.py  wine_items.py
backend/src/schemas/: __init__.py  budget.py  food_item.py  fridge.py  invitation.py  notification.py  recipe.py  wine_item.py
backend/src/scripts/: clear_rich_menu.py  generate_rich_menu_img.py  setup_rich_menu.py
backend/src/services/: __init__.py  ai_vision.py  budget_service.py  flex_message.py  line_bot.py  recipe_service.py  scheduler.py  storage.py  wine_vision.py
backend/src/utils/: __init__.py
backend/tests/: conftest.py  test_expiry_logic.py
docs/: LINE_BOT_SETUP.md  line-rich-menu.json
frontend/: .dockerignore  Dockerfile  index.html  (+4 more)
(+51 files in other folders)
